Allow to collapse/expand articles; auto collapse for big articles (issue #331)

--- a/article-style.css
+++ b/article-style.css
@@ -36,6 +36,7 @@ pre
 {
   border: 1px dotted black; padding: 0.2em; padding-left: 0.5em;
   margin-top: 1.2em; margin-bottom: 0.1em; font-weight: bold; font-size: 14px;
+  cursor: pointer !important ;
   /*background: #ffffdd;*/
 }
 
